# Aristotelian-AI-Project

./: .env.example  .gitignore  Dockerfile  LICENSE.md  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirement.txt
.github/workflows/: cd.yml  ci.yml  evaluation.yml  security-scan.yml
notebooks/: data_prep.ipynb  training_and_evaluation.ipynb
requirements/: base.txt  development.txt  production.txt  testing.txt
scripts/setup/: download_models.py  initialize_database.py  setup_dev_environment.sh
src/: chatbot.py  cohere_client.py  data_preparation.py  train_model.py
src/api/: main.py
src/api/middleware.py/: auth.py  rate_limiter.py
src/api/models/: request_models.py  response_models.py
src/api/routes/: chat.py  evaluation.py  health.py
src/core/: multilingual_processor.py
src/data/: pdf_processor.py
src/database/: models.py
src/utils/: config.py  exceptions.py  logging.py  metrics.py
tests/: test_chatbot.py
